# quickstart-android-c-api

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/banuba/sdk/example/quickstart_c_api/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/effects/Afro/: config.json
app/src/main/cpp/: CMakeLists.txt  effect_player.cpp  effect_player.hpp  native-lib.cpp  render_context.cpp  render_context.hpp
app/src/main/cpp/offscreen_effect_player/: CMakeLists.txt
app/src/main/cpp/offscreen_effect_player/interfaces/: offscreen_render_target.hpp
app/src/main/java/com/banuba/quickstart_c_api/: BanubaClientToken.java  GLNV12Renderer.java  GLNV12RendererConsts.java  GLNVRenderer.java  GLRGBARenderer.java  GLRenderer.java  GLShaderProgram.java  Image.java  MainActivity.java  OffscreenEffectPlayer.java  OffscreenEffectPlayerImage.java  ResourcesExtractor.kt
app/src/main/java/com/banuba/quickstart_c_api/rendering/: GL420PetrRenderer.java  GL420Renderer.java  GLNV12Renderer.java  GLRGBARenderer.java  GLRenderer.java  GLShaderProgram.java  GLYUVNVRenderer.java
app/src/main/java/com/banuba/sdk/example/common/: BanubaClientToken.kt
app/src/main/java/com/banuba/sdk/example/quickstart_c_api/: GLRenderer.java  GLShaderProgram.java  MainActivity.java  MainActivity.kt  OffscreenEffectPlayer.java  OffscreenEffectPlayer.kt  ResourcesExtractor.kt  YUVtoRGB.kt
app/src/main/java/com/banuba/sdk/example/quickstart_cpp/: BanubaSdk.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/banuba/sdk/example/quickstart_c_api/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
